# orqestra-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ascii_logo.txt  compose.yaml  config.yaml  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yml
capabilities/: browser_axe.py  browser_core.py  browser_seo.py  charts.py  compute.py  data.py  knowledge.py  research.py  skills.py
core/: capabilities.py  display.py  engine.py
departments/competitive-intel/: persona.md
departments/content-creation/: persona.md
docs/: refactoring-rueckstand.md
knowledge_base/competitors/: example-crm-gmbh.md
knowledge_base/markets/: saas-dach.md
personas/: orchestrator.de.md  orchestrator.md  strategist.md
scripts/: bootstrap.sh  migrate_wiki_folders.py
skills/: axe-wcag-accessibility.md  break-even-analysis.md  business-model-canvas.md  competitor-analysis.md  competitor-deep-dive.md  content-calendar.md  email-campaign.md  financial-forecast.md  market-sizing.md  okr-framework.md  pricing-analysis.md  project-kickoff.md  proposal-generation.md  risk-assessment.md  sales-pitch.md  seo-competitor-analysis.md  seo-content-brief.md  seo-keyword-research.md  seo-onpage-optimization.md  seo-page-speed.md  seo-site-audit.md  social-media-strategy.md  stakeholder-mapping.md  swot-analysis.md  unit-economics.md  value-proposition-canvas.md  wiki-delete.de.md  wiki-delete.md  wiki-draft.de.md  wiki-draft.md  wiki-ingest.de.md  wiki-ingest.md  wiki-lint.de.md  wiki-lint.md  wiki-newsletter.de.md  wiki-newsletter.md  wiki-query.de.md  wiki-query.md  wiki-scrape.de.md  wiki-scrape.md
src/orqestra/: __init__.py  (+4 more)
tests/: conftest.py  test_deep_work.py  test_fts_query.py  test_job_store.py  test_knowledge_base.py  test_metadata.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+125 files in other folders)
