[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cod-agent"
version = "0.1.0"
description = "Business strategy agent with integrated knowledge base"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "python-frontmatter>=1.0",
    "trafilatura>=1.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "numpy>=1.24",
]
browser = [
    "playwright>=1.40",
]

[tool.setuptools]
py-modules = ["main"]
packages = ["core", "capabilities"]

[project.scripts]
cod = "main:main"
